Fix footer icons alignment

--- a/src/app/shared/footer.component/footer.component.css
+++ b/src/app/shared/footer.component/footer.component.css
@@ -28,4 +28,5 @@ footer div a{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
